--- a/css/partials/_mediaQueries900.scss
+++ b/css/partials/_mediaQueries900.scss
@@ -2,11 +2,11 @@
 
     .encabezado{
 
-        .divBoton{
-            margin-right: 50px;
-            }
+        .divLogo{
+            margin-right: 0;
         }
-
+    }
+    
     .tituloPrincipal{
         padding-top: 30px;
         padding-bottom: 0px;
